# projectaria_tools

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.fedora  README.md  generate_stubs.py  index.html  lunr-index-1753107586445.json  lunr-index-1755630772517.json  lunr-index-1755645902482.json  lunr-index-1755931117479.json  lunr-index-1760736915777.json  lunr-index-1761005737410.json  lunr-index-1762468220167.json  lunr-index-1763754298030.json  lunr-index-1764952883188.json  lunr-index-1765479792271.json  lunr-index-1773872013547.json  lunr-index-1781700562999.json  pixi.toml  pyproject.toml  pyproject_arm64.toml  search-doc-1753107586445.json  search-doc-1755630772517.json  search-doc-1755645902482.json  search-doc-1755931117479.json  search-doc-1760736915777.json  search-doc-1761005737410.json  search-doc-1762468220167.json  search-doc-1764952883188.json  search-doc-1765479792271.json  search-doc-1773872013547.json  search-doc.json  search-index-default.json  search-index-docs-default-current.json  setup.py  sitemap.xml  (+1 more)
core/calibration/: BarometerCalibration.cpp  BarometerCalibration.h  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  CameraCalibrationFormat.h  CameraConfigBuilder.cpp  CameraConfigBuilder.h  ConfigData.cpp  ConfigData.h  ConfigFileLoader.cpp  ConfigFileLoader.h  DeviceCadExtrinsics.cpp  DeviceCadExtrinsics.h  DeviceCalibration.cpp  DeviceCalibration.h  DeviceVersion.cpp  DeviceVersion.h  ImuMagnetometerCalibration.cpp  ImuMagnetometerCalibration.h  ImuMagnetometerCalibrationFormat.h  MicrophoneCalibration.cpp  MicrophoneCalibration.h  SensorCalibration.cpp  SensorCalibration.h  SvdPointCloudAlignment.cpp  SvdPointCloudAlignment.h
core/calibration/camera_projections/: CMakeLists.txt  CameraProjection.cpp  CameraProjection.h  CameraProjectionFormat.h  Common.h  FisheyeRadTanThinPrism.h  IgnoreJetInfinitesimal.h  KannalaBrandtK3.h  Linear.h  Spherical.h
core/calibration/loader/: AriaCalibRescaleAndCrop.cpp  AriaCalibRescaleAndCrop.h  CMakeLists.txt  DeviceCalibrationJson.cpp  DeviceCalibrationJson.h  SensorCalibrationJson.cpp  SensorCalibrationJson.h
core/calibration/test/: SvdPointCloudAlignmentTest.cpp
core/calibration/utility/: CMakeLists.txt  Distort.cpp  Distort.h  NullRef.h
core/data_provider/: AriaStreamIds.h  CMakeLists.txt  DeliverQueuedOptions.cpp  DeliverQueuedOptions.h  ErrorHandler.h  QueryMapByTimestamp.h  README.md  RecordReaderInterface.cpp  RecordReaderInterface.h  SensorConfiguration.cpp  SensorConfiguration.h  SensorData.cpp  SensorData.h  SensorDataSequence.cpp  SensorDataSequence.h  SensorDataType.cpp  SensorDataType.h  StreamIdConfigurationMapper.cpp  StreamIdConfigurationMapper.h  StreamIdLabelMapper.cpp  StreamIdLabelMapper.h  SubstreamSelector.cpp  SubstreamSelector.h  TimeCodeMapper.cpp  TimeCodeMapper.h  TimeSyncMapper.cpp  TimeSyncMapper.h  TimeTypes.h  TimestampIndexMapper.cpp  TimestampIndexMapper.h  VrsDataProvider.cpp  VrsDataProvider.h  VrsDataProviderFactory.cpp  VrsMetadata.h
core/data_provider/data_layout/: AlsFlickerDetectionMetadata.h  AlsMetadata.h  AudioMetadata.h  BarometerMetadata.h  BatteryStatusMetadata.h  BluetoothBeaconMetadata.h  CMakeLists.txt  EmgMetadata.h  EyeGazeMetadata.h  GpsMetadata.h  HandPoseMetadata.h  ImageSensorMetadata.h  MotionSensorMetadata.h  PoseMetadata.h  PpgMetadata.h  ReadMe.md  TemperatureMetadata.h  TimeSyncMetadata.h  VioMetadata.h  WifiBeaconMetadata.h
core/data_provider/data_types/: CMakeLists.txt  FrontendOutput.h  FrontendTypes.cpp  FrontendTypes.h  Uuid.h
core/data_provider/json_io/: CMakeLists.txt  FrontendTypesJson.cpp  FrontendTypesJson.h  JsonHelpers.h
core/data_provider/players/: AlsFlickerDetectionPlayer.cpp  AlsFlickerDetectionPlayer.h  AlsPlayer.cpp  AlsPlayer.h  AudioPlayer.cpp  AudioPlayer.h  BarometerPlayer.cpp  BarometerPlayer.h  BatteryStatusPlayer.cpp  BatteryStatusPlayer.h  BluetoothBeaconPlayer.cpp  BluetoothBeaconPlayer.h  CMakeLists.txt  DataPlayerUtils.h  EmgPlayer.cpp  (+28 more)
core/gen2_mp_csv_exporter/: CMakeLists.txt  Gen2MpCsvExporter.cpp  Gen2MpCsvExporter.h  main.cpp
core/mps/: CMakeLists.txt  CachedDataProviders.h  CompressedIStream.cpp  CompressedIStream.h  CompressionMode.h  EyeGaze.h  EyeGazeFormat.h  EyeGazeReader.cpp  EyeGazeReader.h  GlobalPointCloud.h  GlobalPointCloudFilter.h  GlobalPointCloudFormat.h  GlobalPointCloudReader.cpp  GlobalPointCloudReader.h  HandTracking.cpp  HandTracking.h  HandTrackingFormat.h  HandTrackingReader.cpp  HandTrackingReader.h  MpsDataPathsFormat.h  MpsDataPathsProvider.cpp  MpsDataPathsProvider.h  MpsDataProvider.cpp  MpsDataProvider.h  MpsFileNames.h  OnlineCalibration.h  OnlineCalibrationFormat.h  OnlineCalibrationsReader.cpp  OnlineCalibrationsReader.h  PointObservation.h  PointObservationFormat.h  PointObservationReader.cpp  PointObservationReader.h  Readme.md  StaticCameraCalibration.h  StaticCameraCalibrationFormat.h  StaticCameraCalibrationReader.cpp  StaticCameraCalibrationReader.h  Trajectory.h  TrajectoryFormat.h  (+5 more)
projectaria_tools-stubs/: pyproject.toml
projects/AriaDigitalTwinDatasetTools/: CMakeLists.txt  ReadMe.md  setup.py
projects/AriaSyntheticEnvironment/: AseCalibrationProvider.cpp  AseCalibrationProvider.h  CMakeLists.txt  aria_synthetic_environments_downloader.py
sample_project/: CMakeLists.txt  my_custom_camera_projector.cpp
sample_project/lib/: MyCustomCameraModel.cpp  MyCustomCameraModel.h
tools/mps_visualization/: Boundary.h  CMakeLists.txt  CachedDataProviders.h  Data3DGui.cpp  Data3DGui.h  EyeGazeAriaPlayer.cpp  EyeGazeAriaPlayer.h  EyeGazeAriaViewer.cpp  EyeGazeAriaViewer.h  EyeGazeAriaVisualizationData.h  MPS3DSceneViewer.cpp  MPS3DSceneViewer.h  MPSData3DGui.cpp  MPSData3DGui.h  PangolinHelper.h  main_3d_replay_viewer.cpp  main_3d_scene_viewer.cpp  main_eyegaze.cpp
tools/visualization/: AriaPlayer.cpp  AriaPlayer.h  AriaViewer.cpp  AriaViewer.h  AriaVisualizationControlAndData.cpp  AriaVisualizationControlAndData.h  CMakeLists.txt  PangolinColor.cpp  PangolinColor.h  PlottingHelper.cpp  PlottingHelper.h  main.cpp
(+2349 files in other folders)
