[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectaria-tools-stubs"
version = "1.3.0"
description = "Stubs for projectaria-tools"

[tool.setuptools.packages.find]
where = ["./"]

[tool.setuptools.package-data]
"*" = ["**/*.pyi", "**/**/*.pyi", "**/**/**/*.pyi"]
